--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -24,11 +24,16 @@
                 "input": "public"
               }
             ],
-            "styles": [
+            "styles": [              
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
+
+             "node_modules/bootstrap-icons/font/bootstrap-icons.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+                "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+
+            ]
           },
           "configurations": {
             "production": {
