--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -24,10 +24,10 @@
                 "input": "public"
               }
             ],
-            "styles": [              
+            "styles": [
+              "@angular/material/prebuilt-themes/rose-red.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
-
-             "node_modules/bootstrap-icons/font/bootstrap-icons.css",
+              "node_modules/bootstrap-icons/font/bootstrap-icons.css",
               "src/styles.css"
             ],
             "scripts": [
@@ -84,7 +84,10 @@
                 "input": "public"
               }
             ],
-            "styles": ["src/styles.css"],
+            "styles": [
+              "@angular/material/prebuilt-themes/rose-red.css",
+              "src/styles.css"
+            ],
             "scripts": []
           }
         }
