--- a/safeguard/requirements.txt
+++ b/safeguard/requirements.txt
@@ -6,3 +6,8 @@ psycopg2-binary==2.9.9
 Pillow==10.3.0
 django-cors-headers==4.3.1
 django-environ==0.11.2
+
+face-recognition==1.3.0
+opencv-python==4.9.0
+Pillow==10.3.0
+dlib==19.24.2
